--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -12,7 +12,7 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/coingen/nexuscoin.git"
+- "url": "https://github.com/hg5fm/nexuscoin.git
   "dir": "nexuscoin"
 files:
 - "qt-win32-4.8.3-gitian-r1.zip"
