--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -20,7 +20,7 @@ packages:
 - "libpng12-dev"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/coingen/nexuscoin.git"
+- "url": "https://github.com/hg5fm/nexuscoin.git"
   "dir": "nexuscoin"
 files:
 - "miniupnpc-1.6.tar.gz"
